[Akshay] Add: Added and fixed Book model: - Created Book model with necessary fields - Added built-in validations - Fixed relationships issue
