# swagger/v1/swagger.yaml
@@ -67,7 +67,7 @@ paths:
     post:
       summary: Forgot Password
       tags:
-      - Authentication
+      -  Users
       parameters: []
       responses:
         '200':
@@ -88,7 +88,7 @@ paths:
     post:
       summary: Reset Password
       tags:
-      - Authentication
+      -  Users
       parameters: []
       responses:
         '200':
